WIP: Session data structure to be built out of JSON session objects

--- a/config.json
+++ b/config.json
@@ -6,6 +6,10 @@
 		"peer": {
 			"publicKey": "fjdufyd7ht78UGH=",
 			"endpoint": "google.com:1111"
+		},
+		"hooks": {
+			"up": "fuck",
+			"down": "poes"
 		}
 	},
 	
