Updated JSON configuration syntax to reflect new additions

--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
 		"listen": "[::]:1001",
 		"peer": {
 			"publicKey": "fjdufyd7ht78UGH=",
-			"endpoint": "google.com:1111"
+			"endpoint": "google.com:1111",
+			"bind": "[::]:0"
 		},
 		"hooks": {
 			"up": "fuck",
